Enable school days until graduation
This is it. The feature is finally enabled (with the placeholder "SD")
button.

- Export schoolDaysTillGrad() in src/lib/lib.js
- Add btnHandler() to src/js/index.js
- Add school days and calendar days handler to btnHandler()
  in src/js/index.js

--- a/src/styles/_params.scss
+++ b/src/styles/_params.scss
@@ -21,6 +21,8 @@ $countdown-box-font-family: Arial;
 $countdown-box-title-font-size: 50px;
 $countdown-box-title-color: #fff;
 
+$countdown-box-title-smaller-font-size: 45px;
+
 $countdown-box-countdown-font-size: 300px;
 $countdown-box-countdown-color: #0077C0;
 $countdown-box-countdown-background: #37AFF7;
