Add icon for mode toggle switch
"SD" and "CD" were placeholder texts. These icons work much better than
the texts.

- Add SVG data-uri loader to webpack.config.js
- Add src/images/calendar-day.svg
- Add src/images/school-day.svg
- Remove placeholder texts from docs/index.html
- Remove placeholder texts from btnHandler() in src/js/index.js
- Replace .btn with %btn mixin in src/styles/style.scss
- Add icon to .school-day in src/styles/style.scss
- Add icon to .calendar-day in src/styles/style.scss

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -107,20 +107,35 @@ html, body
         margin-bottom: 20px;
         text-align: center;
 
-        .btn
+        %btn
         {
           display: inline-block;
           vertical-align: top;
-          width: 32px;
-          height: 32px;
+          width: 50px;
+          height: 50px;
           margin-right: 5px;
-          background: #fff;
           cursor: pointer;
         }
 
-        .btn:last-child
+        %btn:last-child
         {
-          margin-right: none;
+          margin-right: 0;
+        }
+
+        .school-days
+        {
+          @extend %btn;
+          background: url("../images/school-day.svg");
+          background-size: 50px 50px;
+          background-position: center center;
+        }
+
+        .calendar-days
+        {
+          @extend %btn;
+          background: url("../images/calendar-day.svg");
+          background-size: 50px 50px;
+          background-position: center center;
         }
       }
     }
