Fix scaling and implement custom build scripts
Scaling did not work well on devices other than the development device.
Custom build scripts are needed to automate error-prone steps.

- Add LICENSE
- Add README.md
- Add description meta to docs/index.html
- Add viewport meta to docs/index.html
- Implement unsupported resolution notice to docs/index.html
- Remove "and contributors" from copyright declaration message
  in docs/index.html
- Change license attribute to "MIT" in package.json
- Move webpack build script to "build:webpack" in package.json
- Add build step for adding copyright and license declarations to
  app.js to "build:appjs" in package.json
- Add build step for updating the version attribute in package.json to
  match the values in the versioning library to "build:version"
  in package.json
- Aggregate all build steps to "build" in package.json
- Add scripts/build-appjs.js
- Add scripts/build-version.js
- Add copyright and license declaration headers to src/js/index.js
- Add copyright and license declaration headers to src/lib/lib.js
- Add copyright and license declaration headers to src/lib/nsd.js
- Add copyright and license declaration headers to src/lib/version.js
- Implement whitespace removal step to getPreRelease()
  in src/lib/version.js
- Implement whitespace removal step to getMeta() in src/lib/version.js
- Add copyright and license declaration headers
  to src/styles/_mixins.scss
- Add copyright and license declaration headers
  to src/styles/_params.scss
- Add unsupported resolution warning customization parameters
  to src/styles/_params.scss
- Add countdown box parameters to src/styles/_params.scss
- Add footer parameters to src/styles/_params.scss
- Add copyright and license declaration headers to src/styles/style.scss
- Implement unsupported resolution warning styles
  to src/styles/style.scss
- Implement scaling to src/styles/style.scss

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,12 @@
+// daysTillGrad
+// A countdown until graduation for Maine West High School Class of 2019
+//
+// File Name: src/styles/_mixins.scss
+// Description: Partial Sass file for hosting commonly used Mixins
+//
+// (c) 2019 GHIFARI160. All rights reserved.
+// Distributed under the terms of the MIT License
+
 @mixin box-shadow($h-offset, $v-offset, $blur, $spread, $color)
 {
   -webkit-box-shadow: $h-offset $v-offset $blur $spread $color;
