Add changelog viewer and links to roadmap and feedback Google Form
A changelog viewer is long overdue for this project. Links to the
roadmap and the feedback Google Form had been planned for quite some
time.

- Force node-sass implementation of sass-loader in webpack.config.js
- Add raw-loader for CHANGELOG in webpack.config.js
- Add external URIs generation and replacement library
  in src/lib/external-uris.js
- Add hyphens mixins to src/styles/_mixins.scss
- Rename modal to modal-warning and modal-wrapper to
  modal-warning-wrapper in src/styles/_params.scss
- Add modal and modal-wrapper parameters for the changelog viewer
  in src/styles/_params.scss
- Rename modal to modal-warning and modal-wrapper to
  modal-warning-wrapper in src/styles/style.scss
- Implement the changelog viewer with modal and modal-wrapper classes
  in src/styles/style.scss
- Add CHANGELOG based on Keep a Changelog v1.0.0, slightly modified for
  UI rendering purposes
- Rename modal to modal-warning and modal-wrapper to
  modal-warning-wrapper in docs/index.html
- Add links subsection to the footer in docs/index.html
- Add link to the changelog viewer in docs/index.html
- Add roadmap, feedback form, and source code pseudo-links
  in docs/index.html
- Modify scripts/build-version.js to modify the version attribute
  in package-lock.json to match the values provided in the versioning
  library
- Implement external pseudo-links to actual link convertion/generation
  algorithm to src/js/index.js
- Implement the changelog viewer in src/js/index.js
- Update development and building environment dependencies (webpack
  and webpack-cli) in package-lock.json
- Add raw-loader as a development and building environment dependency
  in package.json

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,5 +1,5 @@
 // daysTillGrad
-// A countdown until graduation for Maine West High School Class of 2019
+// Countdown until graduation for Maine West High School Class of 2019
 //
 // File Name: src/styles/_mixins.scss
 // Description: Partial Sass file for hosting commonly used Mixins
@@ -12,4 +12,12 @@
   -webkit-box-shadow: $h-offset $v-offset $blur $spread $color;
   -moz-box-shadow: $h-offset $v-offset $blur $spread $color;
   box-shadow: $h-offset $v-offset $blur $spread $color;
+}
+
+@mixin hyphens($hyphens)
+{
+  -webkit-hyphens: $hyphens;
+  -moz-hyphens: $hyphens;
+  -ms-hyphens: $hyphens;
+  hyphens: $hyphens;
 }
