Implement new version notice and modify school days countdown
New version notice will now be displayed if the app is loaded with the
GET parameters of `nvd=true`. The school days countdown now accounts for
the end of a normal school day (3:20 PM).

- Change "End of " with "End" in the gtag.js area in docs/index.html
- Modify the version build script to write the current version
  into docs/VERSION in scripts/build-version.js
- Implement modal helper functions in src/js/index.js
- Optimize replaceExternalURIs() by moving it into within onload()
  in src/js/index.js
- Implement modal display for the new version notice in src/js/index.js
- Optimize all DOM calls in src/js/index.js
- Implement issue tracker URI replacement in src/lib/external-uris.js
- Modify the school days until graduation calculation algorithm to
  account for the end of a normal school day in src/lib/lib.js
- Add modal links styles in src/styles/style.scss
- Optimize modal styles in src/styles/style.scss
- Add modal links style parameters in src/styles/_params.scss

--- a/src/styles/_params.scss
+++ b/src/styles/_params.scss
@@ -7,6 +7,13 @@
 // (c) 2019 GHIFARI160. All rights reserved.
 // Distributed under the terms of the MIT License
 
+$modal-a-color: #0077C0;
+$modal-a-text-decoration: underline;
+$modal-a-hover-color: #0077C0;
+$modal-a-hover-text-decoration: none;
+$modal-a-active-color: inherit;
+$modal-a-active-text-decoration: none;
+
 $modal-warning-background: #0077C0;
 $modal-warning-wrapper-title-font-size: 1.5em;
 $modal-warning-wrapper-title-color: #fff;
