--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -30,6 +30,34 @@ html, body
   display: none;
 }
 
+%modal-wrapper-base
+{
+  position: fixed;
+
+  display: none;
+
+  a,
+  a:link,
+  a:visited,
+  a:focus,
+  {
+    color: $modal-a-color;
+    text-decoration: $modal-a-text-decoration;
+  }
+
+  a:hover
+  {
+    color: $modal-a-hover-color;
+    text-decoration: $modal-a-hover-text-decoration;
+  }
+
+  a:active
+  {
+    color: $modal-a-active-color;
+    text-decoration: $modal-a-active-text-decoration;
+  }
+}
+
 .modal-warning
 {
   @extend %modal-base;
@@ -47,7 +75,12 @@ html, body
 
 .modal-warning-wrapper
 {
-  @extend %modal-base;
+  @extend %modal-wrapper-base;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
 
   z-index: 2100;
 
@@ -86,7 +119,7 @@ html, body
 .modal-wrapper
 
 {
-  position: fixed;
+  @extend %modal-wrapper-base;
   top: 50%;
   left: 50%;
   z-index: 1100;
