Implement special events notice
There are a number of landmark special events in the senior year.
Examples: last full week of school, Senior BBQ, Prom, and, of course,
Graduation day. This feature captures and emphasized such events.

- Add animation to notice_create() in src/js/index.js
- Add heights to the `title` class inside of `countdown-box`
  in src/styles/style.scss

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -571,180 +571,210 @@ html, body
       @media screen and (min-width: 320px)
       and (min-height: 260px)
       {
+        height: $countdown-box-title-font-size * 0.360;
         font-size: $countdown-box-title-font-size * 0.360;
       }
 
       @media screen and (min-width: 375px) and (max-width: 767px)
       and (min-height: 300px)
       {
+        height: $countdown-box-title-font-size * 0.420;
         font-size: $countdown-box-title-font-size * 0.420;
       }
 
       @media screen and (min-width: 425px) and (max-width: 767px)
       and (min-height: 330px)
       {
+        height: $countdown-box-title-font-size * 0.480;
         font-size: $countdown-box-title-font-size * 0.480;
       }
 
       @media screen and (min-width: 768px) and (max-width: 1023px)
       and (min-height: 310px)
       {
+        height: $countdown-box-title-font-size * 0.360;
         font-size: $countdown-box-title-font-size * 0.360;
       }
 
       @media screen and (min-width: 768px) and (max-width: 1023px)
       and (min-height: 350px)
       {
+        height: $countdown-box-title-font-size * 0.480;
         font-size: $countdown-box-title-font-size * 0.480;
       }
 
       @media screen and (min-width: 768px) and (max-width: 1023px)
       and (min-height: 530px)
       {
+        height: $countdown-box-title-font-size * 0.800;
         font-size: $countdown-box-title-font-size * 0.800;
       }
 
       @media screen and (min-width: 768px) and (max-width: 1023px)
       and (min-height: 579px)
       {
+        height: $countdown-box-title-font-size * 0.900;
         font-size: $countdown-box-title-font-size * 0.900;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 260px)
       {
+        height: $countdown-box-title-font-size * 0.200;
         font-size: $countdown-box-title-font-size * 0.200;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 310px)
       {
+        height: $countdown-box-title-font-size * 0.300;
         font-size: $countdown-box-title-font-size * 0.300;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 360px)
       {
+        height: $countdown-box-title-font-size * 0.400;
         font-size: $countdown-box-title-font-size * 0.400;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 410px)
       {
+        height: $countdown-box-title-font-size * 0.500;
         font-size: $countdown-box-title-font-size * 0.500;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 460px)
       {
+        height: $countdown-box-title-font-size * 0.600;
         font-size: $countdown-box-title-font-size * 0.600;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 530px)
       {
+        height: $countdown-box-title-font-size * 0.700;
         font-size: $countdown-box-title-font-size * 0.700;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 580px)
       {
+        height: $countdown-box-title-font-size * 0.800;
         font-size: $countdown-box-title-font-size * 0.800;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 630px)
       {
+        height: $countdown-box-title-font-size * 0.900;
         font-size: $countdown-box-title-font-size * 0.900;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 680px)
       {
+        height: $countdown-box-title-font-size * 1.000;
         font-size: $countdown-box-title-font-size * 1.000;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 730px)
       {
+        height: $countdown-box-title-font-size * 1.100;
         font-size: $countdown-box-title-font-size * 1.100;
       }
 
       @media screen and (min-width: 1024px) and (max-width: 1439px)
       and (min-height: 780px)
       {
+        height: $countdown-box-title-font-size * 1.200;
         font-size: $countdown-box-title-font-size * 1.200;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 260px)
       {
+        height: $countdown-box-title-font-size * 0.200;
         font-size: $countdown-box-title-font-size * 0.200;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 320px)
       {
+        height: $countdown-box-title-font-size * 0.300;
         font-size: $countdown-box-title-font-size * 0.300;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 370px)
       {
+        height: $countdown-box-title-font-size * 0.400;
         font-size: $countdown-box-title-font-size * 0.400;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 430px)
       {
+        height: $countdown-box-title-font-size * 0.500;
         font-size: $countdown-box-title-font-size * 0.500;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 480px)
       {
+        height: $countdown-box-title-font-size * 0.600;
         font-size: $countdown-box-title-font-size * 0.600;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 530px)
       {
+        height: $countdown-box-title-font-size * 0.700;
         font-size: $countdown-box-title-font-size * 0.700;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 590px)
       {
+        height: $countdown-box-title-font-size * 0.800;
         font-size: $countdown-box-title-font-size * 0.800;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 640px)
       {
+        height: $countdown-box-title-font-size * 0.900;
         font-size: $countdown-box-title-font-size * 0.900;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 690px)
       {
+        height: $countdown-box-title-font-size * 1.000;
         font-size: $countdown-box-title-font-size * 1.000;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 750px)
       {
+        height: $countdown-box-title-font-size * 1.100;
         font-size: $countdown-box-title-font-size * 1.100;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 800px)
       {
+        height: $countdown-box-title-font-size * 1.200;
         font-size: $countdown-box-title-font-size * 1.200;
       }
 
       @media screen and (min-width: 1440px)
       and (min-height: 850px)
       {
+        height: $countdown-box-title-font-size * 1.300;
         font-size: $countdown-box-title-font-size * 1.300;
       }
     }
